# RAVE-audition

./: .gitignore  CMakeLists.txt  README.md
Release/RAVE Audition.vst3/Contents/: Info.plist
Release/RAVE Audition.vst3/Contents/MacOS/: RAVE Audition
Source/: EngineUpdater.cpp  EngineUpdater.h  FifoBuffer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Rave.h
cmake/: add_torch.cmake
